Huion pen pressure still don't work in linux Blender 2.8 #59564

Closed
opened 2018-12-18 13:15:56 +01:00 by Daniel Martinez Lara · 7 comments

version: 2.80 (sub 39), branch: blender2.8, commit date: 2018-12-18 12:08, hash: c92cffb, type: Release
build date: 2018-12-18, 13:04:19
platform: Linux

Huion pen pressure still don't work in linux Blender 2.8 (Grease pencil, sculpt, texture paint)

Was reported before but the problem still
https://developer.blender.org/T58776

Daniel

version: 2.80 (sub 39), branch: blender2.8, commit date: 2018-12-18 12:08, hash: c92cffb, type: Release build date: 2018-12-18, 13:04:19 platform: Linux Huion pen pressure still don't work in linux Blender 2.8 (Grease pencil, sculpt, texture paint) Was reported before but the problem still https://developer.blender.org/T58776 Daniel
Author
Member

Added subscriber: @pepe-school-land

Added subscriber: @pepe-school-land

Added subscriber: @brecht

Added subscriber: @brecht

Did it work in the official 2.79b release or latest master builds?

Can you attach the output of running this in the terminal?

xinput list --long

Do you have more than one tablet device connected?

Did it work in the official 2.79b release or latest master builds? Can you attach the output of running this in the terminal? ``` xinput list --long ``` Do you have more than one tablet device connected?
Brecht Van Lommel self-assigned this 2018-12-18 13:31:39 +01:00
Author
Member

Yes, work well in Blender 2.79 official, the Huion is the only pen device connected. In previous version of Blender 2.8 (a month ago so) works OK with in same PC/Huion configuration .

The output file form xinput list --long OUTPUT.txt

Yes, work well in Blender 2.79 official, the Huion is the only pen device connected. In previous version of Blender 2.8 (a month ago so) works OK with in same PC/Huion configuration . The output file form xinput list --long [OUTPUT.txt](https://archive.blender.org/developer/F5992704/OUTPUT.txt)

This issue was referenced by 8c4ae8961c

This issue was referenced by 8c4ae8961cb2447cce64667b5dc40785f3b4709a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Thnaks!

Thnaks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59564
No description provided.