Fix T59564: Huion pen pressure not working on Linux, after recent changes.